--- a/circle.yml
+++ b/circle.yml
@@ -5,3 +5,6 @@ checkout:
     - git submodule sync
     - git submodule update --init --recursive
 
+dependencies:
+  cache_directories:
+    - linux
